[package]
name = "trusty_passwd"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     
lto = true         
codegen-units = 1  
panic = 'abort' 
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
